--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
     arguments: '--configuration $(BuildConfiguration)'
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '- task: DotNetCoreCLI@2   name: ''Publish''   displayName: ''Publish''   inputs:     command: ''publish''     publishWebProjects: false     projects: ''$(project)''     arguments: ''--configuration $(BuildConfiguration) --output $(BuildArtifactStagingDirectory)''     zipAfterPublish: false - task: PublishBuildArtifacts@1   name: ''PublishBuildArtifacts''   displayName: ''Publish build artifacts''   inputs:     PathtoPublish: ''$(Build.ArtifactStagingDirectory)''     ArtifactName: ''drop''     publishLocation: ''Container'''
+    SourceFolder: '$(agent.builddirectory)'
     Contents: '**/*.zip'
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
