--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,18 @@ steps:
     SourceFolder: '$(agent.builddirectory)'
     Contents: '**/*.cs'
     TargetFolder: '$(build.artifactstagingdirectory)'
+- task: DotNetCoreCLI@2
+  name: 'Publish'
+  displayName: 'Publish'
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: '$(project)'
+    arguments: '--configuration $(BuildConfiguration) --output $(BuildArtifactStagingDirectory)'
+    zipAfterPublish: true
 - task: PublishBuildArtifacts@1
+  name: 'PublishBuildArtifacts'
+  displayName: 'Publish build artifacts'
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
