--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,8 @@ pool:
 variables:
   buildPlatform: 'ANy CPU'
   buildConfiguration: 'Release'
-  solution: '*/mysolution.sln.sln'
-  project: '**/*.csproj'
+  solution: '/mysolution.sln.sl'
+  project: '/dotnetwebapp/dotnetwebapp.csproj'
 
 steps:
 - task: NuGetToolInstaller@1
